--- a/ModelBindingStyling-Lab/Views/Home/UserProfile.cshtml
+++ b/ModelBindingStyling-Lab/Views/Home/UserProfile.cshtml
@@ -1,59 +1,25 @@
-﻿@model UserProfile
-
-@{
-    ViewData["Title"] = "J. Doe profile page";
+﻿@{
+    ViewData["Title"] = "User Profile";
 }
 
-<h1>Profile Page</h1>
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-6">
+            <div class="card shadow text-center">
+                <div class="card-body">
+                    <img src="https://via.placeholder.com/150"
+                         class="rounded-circle mb-3 img-fluid"
+                         alt="User Photo">
 
-<div>
-    <h4>UserProfile</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserProfileId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.UserProfileId
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.FullName
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.Email
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.PhoneNumber
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.ImageUrl
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GitHubUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.GitHubUrl
-        </dd>
-        <dt>Skilled Languages</dt>
-        <dd>
-            <ul>
-                @foreach(string languageSkill in Model.SkilledLanguages)
-                {
-                    <li>@languageSkill</li>
-                }
-            </ul>
-        </dd>
-    </dl>
+                    <h2 class="card-title">John Doe</h2>
+                    <p class="text-muted">johndoe@email.com</p>
+
+                    <hr />
+
+                    <p><strong>Favorite Printer:</strong> Prusa MK3</p>
+                    <p><strong>Experience Level:</strong> Intermediate</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
